@@ -2,7 +2,8 @@
 <includes>
 	<include name="HomeRecentlyAddedInfo">
 		<control type="group" id="9003">
-			<onup>20</onup>
+			<onup condition="!Skin.HasSetting(AutoHidePowerBtn)">20</onup>
+			<onup condition="Skin.HasSetting(AutoHidePowerBtn)">21</onup>
 			<ondown condition="System.HasAddon(script.globalsearch)">608</ondown>
 			<ondown condition="!System.HasAddon(script.globalsearch)">603</ondown>
 			<visible>!Window.IsVisible(Favourites)</visible>
@@ -39,7 +40,8 @@
 					<height>220</height>
 					<onleft>8000</onleft>
 					<onright>8000</onright>
-					<onup>20</onup>
+					<onup condition="!Skin.HasSetting(AutoHidePowerBtn)">20</onup>
+					<onup condition="Skin.HasSetting(AutoHidePowerBtn)">21</onup>
 					<ondown condition="System.HasAddon(script.globalsearch)">608</ondown>
 					<ondown condition="!System.HasAddon(script.globalsearch)">603</ondown>
 					<viewtype label="535">list</viewtype>
@@ -271,7 +273,8 @@
 					<height>240</height>
 					<onleft>8001</onleft>
 					<onright>8001</onright>
-					<onup>20</onup>
+					<onup condition="!Skin.HasSetting(AutoHidePowerBtn)">20</onup>
+					<onup condition="Skin.HasSetting(AutoHidePowerBtn)">21</onup>
 					<ondown condition="System.HasAddon(script.globalsearch)">608</ondown>
 					<ondown condition="!System.HasAddon(script.globalsearch)">603</ondown>
 					<viewtype label="535">list</viewtype>
@@ -534,7 +537,8 @@
 					<height>240</height>
 					<onleft>8002</onleft>
 					<onright>8002</onright>
-					<onup>20</onup>
+					<onup condition="!Skin.HasSetting(AutoHidePowerBtn)">20</onup>
+					<onup condition="Skin.HasSetting(AutoHidePowerBtn)">21</onup>
 					<ondown condition="System.HasAddon(script.globalsearch)">608</ondown>
 					<ondown condition="!System.HasAddon(script.globalsearch)">603</ondown>
 					<viewtype label="535">list</viewtype>
@@ -806,7 +810,8 @@
 					<height>220</height>
 					<onleft>8003</onleft>
 					<onright>8003</onright>
-					<onup>20</onup>
+					<onup condition="!Skin.HasSetting(AutoHidePowerBtn)">20</onup>
+					<onup condition="Skin.HasSetting(AutoHidePowerBtn)">21</onup>
 					<ondown condition="System.HasAddon(script.globalsearch)">608</ondown>
 					<ondown condition="!System.HasAddon(script.globalsearch)">603</ondown>
 					<viewtype label="535">list</viewtype>
