@@ -2,6 +2,8 @@
 - Updated language files from Transifex
 - Bugfix added return to video playlist command
 - Returned Hard Floor Image to all screens except Home
+- Add Option to Auto Hide Home Submenus
+- Add Option to Hide System Power Button
 
 [B]1.0.3[/B]
 - Added Info Stats Bar
